--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803219.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/20191231PHO0181l-320x200.jpg">【新闻看点】武汉肺炎扩散 专家：感染1700人</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803438.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/Healy_Hall_at_Georgetown_University-320x200.jpg">中共特工美课堂收集情报 中国留学生担心</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/12/n11788275.md#1">114个“耳光”搧向国台办 李敖儿子微博被封</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11796241.md#1">伊朗在变天 中共或失去打击美国的王牌</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/14/n11793300.md#1">【新闻看点】中美初阶段贸协曝光 北京大让步</a><br>
@@ -10,7 +10,6 @@
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798622.md#1">【十字路口】中共叫嚷武统台湾 专家解析后果（上）</a><br>
 <br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803257.md#1">颜丹：中国“人均GDP过万”为何毫无意义？</a><br>
-<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803290.md#1">大成漫画：开口吓傻邪党官</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11802918.md#1">张林：中共魔手把慈善机构变成诈骗团伙</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11802382.md#1">王友群：林郑月娥可知你“错”在哪？</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11802277.md#1">阅明：香港真相揭画皮 三退大潮顺天意</a><br>
@@ -22,6 +21,7 @@
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799968.md#1">俞晓薇：韩国和大陆法轮功学员境遇两重天</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800085.md#1">陆言：共产党离灭亡的终点还有多远？</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/14/n11793721.md#1">传记《穿透阴霾的舞蹈》读后感</a><br>
+<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799892.md#1">袁斌：吴花燕的不幸岂止于物质，更是精神上的</a><br>
 <br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
@@ -32,6 +32,7 @@
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803423.md#1">A股监狱风云续演 身家40亿实控人被捕</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803420.md#1">分析：佛州成中共间谍活动重点目标</a><br>
+<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803219.md#1">【新闻看点】武汉肺炎扩散 专家：感染1700人</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803344.md#1">新生儿创新低 中国人口危机迫在眉睫</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803218.md#1">金玉红遭酷刑 黑龙江610阻律师会见</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803287.md#1">川普政府推动下 美国最早孔子学院将关闭</a><br>
@@ -39,14 +40,15 @@
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798622.md#1">【十字路口】中共叫嚷武统台湾 专家解析后果（上）</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803234.md#1">【热点互动】美中贸易停火期能维持多久?</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803305.md#1">武汉新增17例肺炎 2危重 传播途径仍未知</a><br>
+<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803290.md#1">大成漫画：开口吓傻邪党官</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803161.md#1">开豪车游故宫 红三代耍特权惹众怒</a><br>
-<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11802960.md#1">房还在地址被消失 上海一新生儿无法报户口</a><br>
-<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800815.md#1">分析：台湾大选带给中共哪些打击</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803294.md#1">将习近平名字译成不雅称呼 脸书发声明道歉</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803135.md#1">德国华为分歧持续 默克尔坚持不排除</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803065.md#1">帮助26名中国人偷渡美国 3人被起诉</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803040.md#1">武汉肺炎 首批武汉直飞乘客在纽约落地受检</a><br>
+<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11802960.md#1">房还在地址被消失 上海一新生儿无法报户口</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11802969.md#1">欧盟前外交官涉为中共国安部进行间谍活动</a><br>
+<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800815.md#1">分析：台湾大选带给中共哪些打击</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11802910.md#1">贵州化工厂燃爆 天空被映红 居民急撤离</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11802498.md#1">湖南数十公民过年聚餐 多人遭当局禁止参加</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11802724.md#1">业绩预告频爆雷 大陆数家公司共亏损70亿</a><br>
@@ -54,8 +56,8 @@
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11802037.md#1">中共监控学校 数千学生人脸识别数据遭泄漏</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11802417.md#1">武汉新增4起新型肺炎病例 全数转院隔离</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11802364.md#1">大陆收费公路欠债达5.7万亿</a><br>
-<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11802040.md#1">袁斌：中美贸易战，中共认怂的谜底在这里</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11801973.md#1">开豪车入故宫惹议 “露小宝”自称是红三代</a><br>
+<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11802040.md#1">袁斌：中美贸易战，中共认怂的谜底在这里</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11801989.md#1">江西现史上罕见夏秋冬连旱 552万人受灾</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11801925.md#1">拥抱台湾 捷克海盗党欲扭转总统亲共政策</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801522.md#1">“一带一路”企业再爆雷 半年违约60亿</a><br>
@@ -86,10 +88,8 @@
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800232.md#1">【十字路口】中美贸协难落实 川普另有大战略（1）</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800353.md#1">中国人口首破14亿 出生率70年来最低</a><br>
 <a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796616.md#1">台作家：自由之火终将从香港台湾传到大陆</a><br>
-<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799356.md#1">【翻墙必看】美中贸易协议签署意味着什么</a><br>
-<a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799428.md#1">林郑拒道歉 出席立法会会议惹众怒</a><br>
 <br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/aiaxj298/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800551.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2018/07/1711011026371770-150x120.jpg"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800551.md#1">过年前李文足探视 王全璋状态有好转</a><br>中国传统新年前，1月16日，李文足再?...<br><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799968.md#1">俞晓薇：韩国和大陆法轮功学员境遇两重天</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11797867.md#1">2019年 遭中共迫害的社会精英人士</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798549.md#1">原北京师范大学研究生陶渊  陷冤狱遭迫害</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11795369.md#1">参与迫害法轮功 2019年529人被曝遭厄运</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11797969.md#1">中共禁止美公民离境 美议员提议立法制裁</a><br><br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799726.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2013/10/090609180407100160-150x120.jpg"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799726.md#1">面临诸多灰犀牛 大陆多省下调今年GDP目标</a><br>大陆多个省市近来陆续公布了今年GDP?...<br><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800628.md#1">美参院通过“印太合作法案”对抗中共霸权</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799652.md#1">大陆去年GDP增长6.1% 创29年最低</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799461.md#1">新能源汽车补贴减少 大陆本土品牌雪上加霜</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799230.md#1">大陆债券违约大增 投资者维权艰难纷纷离场</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798918.md#1">出师不利 东莞首家在港上市房企盘中跌10%</a><br><br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800041.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1760730-150x120.jpg"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800041.md#1">伊朗人不踩美国和以色列国旗 网民对比中国</a><br>在伊朗政府承认“误击”乌克兰航空公 ...<br><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800435.md#1">中共纪检系统官员向大老虎泄密 并为其抹案</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800324.md#1">赵紫阳忌日亲友旧部拜祭 墓园现场戒备森严</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/10/n11781776.md#1">【独家】人民日报前副总编遭情夫之子举报</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799783.md#1">贸易协议严打仿冒及盗版 淘宝拼多多受关注</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800036.md#1">中共纪检“内鬼”邱大明泄密收贿细节曝光</a><br><br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800738.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/wuhan-pneumonia-chinese-medicine3_1586627872-150x120.jpg"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800738.md#1">肺炎疫情疑被隐瞒 武汉网民指患者多到躺地上</a><br>湖北武汉去年底起爆发不明原因肺炎， ...<br><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800646.md#1">武汉肺炎致2死 香港共发现81宗疑似个案</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799840.md#1">广东肇庆5车追尾 一车起火五5人死亡</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798917.md#1">武汉肺炎无法排除人传人 美国务院警告防疫</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799721.md#1">一塑料船在长江翻沉 5人下落不明</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798666.md#1">武汉新冠状病毒再增死亡病例 网民冒险爆料</a><br><br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800674.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/11-6-150x120.jpg"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800674.md#1">网友爆光上海人社局12333热线压榨员工</a><br>上海市人力资源和社会保障局有一条热 ...<br><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800373.md#1">一周喝两次珍珠奶茶 河南男童患肠梗阻</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799432.md#1">《新闻拍案惊奇》观众Q</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799718.md#1">大陆男子用牙膏画人像 关灯后令人惊叹</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799626.md#1">北京一公司申请“武大郎”商标被拒 网民热议</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798460.md#1">加网络安全专家：华为参与5G建设风险极大</a><br><br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/14/n11793721.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2010/03/1003031031131371-150x120.jpg"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/14/n11793721.md#1">传记《穿透阴霾的舞蹈》读后感</a><br>加籍华人张铁钧是中国第一流的舞蹈家 ...<br><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796950.md#1">深圳一学校强收午托费 家长提诉求被威胁</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11794164.md#1">涉论文抄袭 新疆大学一博士被撤销学位</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/10/n11782930.md#1">黄渤饰教练引争议 《中国女排》或无缘新年档</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/10/n11783185.md#1">中国C919大飞机因技术瓶颈而延后</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/9/n11780326.md#1">晒与母亲合照宣传新片 徐峥不再以光头示人</a><br><br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/14/n11793171.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-912439212-150x120.jpg"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/14/n11793171.md#1">美参议员呼吁抵制中共监狱奴工制品</a><br>美国国会参议员提醒消费者，抵制中共 ...<br><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/9/n11779813.md#1">中共犯下反人类罪 美国会报告促制裁</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/3/n11765947.md#1">前高管炮轰谷歌中国项目：重利轻人权</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798118.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/6216100bf78f0490ad64bca70c8107d1-150x120.jpg"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798118.md#1">上海两会 访民到举报点投递材料 多人被抓</a><br>上海两会于14日召开，许多访民到市政 ...<br><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11794386.md#1">各省两会临近 北京信访局清场 访民被控制</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/9/n11780313.md#1">重庆访民险遭绑架 施救者三人被警方带走</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/5/n11769412.md#1">无锡访民联署“给黄钦书记的公开信”</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800551.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2018/07/1711011026371770-150x120.jpg"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800551.md#1">过年前李文足探视 王全璋状态有好转</a><br>中国传统新年前，1月16日，李文足再?...<br><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799968.md#1">俞晓薇：韩国和大陆法轮功学员境遇两重天</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11797867.md#1">2019年 遭中共迫害的社会精英人士</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798549.md#1">原北京师范大学研究生陶渊  陷冤狱遭迫害</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11795369.md#1">参与迫害法轮功 2019年529人被曝遭厄运</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11797969.md#1">中共禁止美公民离境 美议员提议立法制裁</a><br><br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799726.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2013/10/090609180407100160-150x120.jpg"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799726.md#1">面临诸多灰犀牛 大陆多省下调今年GDP目标</a><br>大陆多个省市近来陆续公布了今年GDP?...<br><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800628.md#1">美参院通过“印太合作法案”对抗中共霸权</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799652.md#1">大陆去年GDP增长6.1% 创29年最低</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799461.md#1">新能源汽车补贴减少 大陆本土品牌雪上加霜</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799230.md#1">大陆债券违约大增 投资者维权艰难纷纷离场</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798918.md#1">出师不利 东莞首家在港上市房企盘中跌10%</a><br><br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799356.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/b12e08d7a43c5b2ddc889c507cb529aa-150x120.jpg"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799356.md#1">【翻墙必看】美中贸易协议签署意味着什么</a><br>大纪元每天为读者梳理翻墙必看的文章 ...<br><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799428.md#1">林郑拒道歉 出席立法会会议惹众怒</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800041.md#1">伊朗人不踩美国和以色列国旗 网民对比中国</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800435.md#1">中共纪检系统官员向大老虎泄密 并为其抹案</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800324.md#1">赵紫阳忌日亲友旧部拜祭 墓园现场戒备森严</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/10/n11781776.md#1">【独家】人民日报前副总编遭情夫之子举报</a><br><br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800738.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/wuhan-pneumonia-chinese-medicine3_1586627872-150x120.jpg"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800738.md#1">肺炎疫情疑被隐瞒 武汉网民指患者多到躺地上</a><br>湖北武汉去年底起爆发不明原因肺炎， ...<br><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800646.md#1">武汉肺炎致2死 香港共发现81宗疑似个案</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799840.md#1">广东肇庆5车追尾 一车起火五5人死亡</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798917.md#1">武汉肺炎无法排除人传人 美国务院警告防疫</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799721.md#1">一塑料船在长江翻沉 5人下落不明</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798666.md#1">武汉新冠状病毒再增死亡病例 网民冒险爆料</a><br><br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800674.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/11-6-150x120.jpg"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800674.md#1">网友爆光上海人社局12333热线压榨员工</a><br>上海市人力资源和社会保障局有一条热 ...<br><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800373.md#1">一周喝两次珍珠奶茶 河南男童患肠梗阻</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799432.md#1">《新闻拍案惊奇》观众Q</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799718.md#1">大陆男子用牙膏画人像 关灯后令人惊叹</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799626.md#1">北京一公司申请“武大郎”商标被拒 网民热议</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798460.md#1">加网络安全专家：华为参与5G建设风险极大</a><br><br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/14/n11793721.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2010/03/1003031031131371-150x120.jpg"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/14/n11793721.md#1">传记《穿透阴霾的舞蹈》读后感</a><br>加籍华人张铁钧是中国第一流的舞蹈家 ...<br><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796950.md#1">深圳一学校强收午托费 家长提诉求被威胁</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11794164.md#1">涉论文抄袭 新疆大学一博士被撤销学位</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/10/n11782930.md#1">黄渤饰教练引争议 《中国女排》或无缘新年档</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/10/n11783185.md#1">中国C919大飞机因技术瓶颈而延后</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/9/n11780326.md#1">晒与母亲合照宣传新片 徐峥不再以光头示人</a><br><br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/14/n11793171.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-912439212-150x120.jpg"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/14/n11793171.md#1">美参议员呼吁抵制中共监狱奴工制品</a><br>美国国会参议员提醒消费者，抵制中共 ...<br><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/9/n11779813.md#1">中共犯下反人类罪 美国会报告促制裁</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/3/n11765947.md#1">前高管炮轰谷歌中国项目：重利轻人权</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798118.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/6216100bf78f0490ad64bca70c8107d1-150x120.jpg"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798118.md#1">上海两会 访民到举报点投递材料 多人被抓</a><br>上海两会于14日召开，许多访民到市政 ...<br><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11794386.md#1">各省两会临近 北京信访局清场 访民被控制</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/9/n11780313.md#1">重庆访民险遭绑架 施救者三人被警方带走</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/5/n11769412.md#1">无锡访民联署“给黄钦书记的公开信”</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><br><p><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
